--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.qianyi.foodorderingsystem/com.qianyi.foodorderingsystem.HelloApplication
+                            <mainClass>com.qianyi.foodorderingsystem/com.qianyi.foodorderingsystem.FoodOrderingSystem
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
